# jinxiaocun

./: .gitignore  AGENTS.md  README.md
.github/workflows/: flutter_release.yml
.trellis/: .template-hashes.json
.trellis/spec/backend/: database-guidelines.md  index.md
.trellis/spec/frontend/: directory-structure.md  index.md  quality-guidelines.md
.trellis/tasks/00-bootstrap-guidelines/: task.json
.trellis/tasks/05-15-mobile-inbound-inventory-architecture/: prd.md  task.json
.trellis/tasks/05-15-mobile-inbound-inventory-architecture/research/: paddleocr-v3-on-device-android.md  scanning-ocr-options.md
.trellis/tasks/archive/2026-05/05-15-mobile-inbound-inventory-architecture/: info.md  prd.md  task.json
.trellis/tasks/archive/2026-05/05-15-mobile-inbound-inventory-architecture/research/: ppocrv5-android-litert-demo.md
.trellis/workspace/chongyang/: index.md  journal-1.md
backend/: docker-compose.yml  manage.py  requirements.txt  seed_data.py  test_api.py
backend/inventory/: admin.py  models.py
backend/inventory/migrations/: 0001_initial.py  0002_inboundactionlog.py
backend/shop_sync_backend/: api.py  asgi.py  settings.py  urls.py  wsgi.py
backend/shops/: admin.py  models.py
backend/shops/migrations/: 0001_initial.py  0002_customuser_phone.py
backend/templates/admin/: index.html
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.vue  main.ts  style.css
frontend/src/router/: index.ts
frontend/src/store/: auth.ts
frontend/src/utils/: request.ts
frontend/src/views/: InboundManagement.vue  Login.vue  MemberManagement.vue  OutboundManagement.vue  ProductManagement.vue  ShopLayout.vue  ShopSelect.vue  StockLedger.vue  WarehouseStock.vue
mobile_app/: .gitignore  README.md  pubspec.yaml
mobile_app/android/app/: build.gradle.kts  proguard-rules.pro
mobile_app/android/app/src/main/: AndroidManifest.xml
mobile_app/android/app/src/main/cpp/: CMakeLists.txt  image_utils.cpp  image_utils.h  ocr_engine.cpp  ocr_engine.h  postprocess.cpp  postprocess.h  ppocrv5_jni.cpp  ppocrv5_jni.h  text_detector.cpp  text_detector.h  text_recognizer.cpp  unsupported_abi_stub.cpp
mobile_app/android/app/src/main/kotlin/com/xcy/inventory/inventory_mobile_app/: MainActivity.kt
mobile_app/android/app/src/main/kotlin/com/xcy/inventory/inventory_mobile_app/ocr/: OcrResult.kt  OcrService.kt  PaddleOcrEngine.kt
mobile_app/ios/: Podfile
mobile_app/ios/LocalPods/InventoryPaddleOcr/: InventoryPaddleOcr.podspec
mobile_app/ios/LocalPods/InventoryPaddleOcr/Classes/: InventoryPaddleOcr.h  InventoryPaddleOcr.mm  pipeline.cc  pipeline.h  table_process.cc  table_process.h  utils.h
mobile_app/ios/LocalPods/InventoryPaddleOcr/PaddleLite/include/: paddle_use_kernels.h  paddle_use_ops.h
mobile_app/ios/Runner/: AppDelegate.swift  Info.plist
mobile_app/ios/Runner.xcodeproj/: project.pbxproj
mobile_app/lib/: main.dart
mobile_app/lib/src/application/: inventory_service.dart
mobile_app/lib/src/data/: local_database_schema.dart  local_inventory_database.dart
mobile_app/lib/src/domain/: models.dart  ocr_settings.dart  tracking_number_rules.dart
mobile_app/lib/src/ocr/: gemma_extractor.dart  pp_structure_post_processor.dart
mobile_app/lib/src/platform/: paddle_ocr_channel.dart  scanner_channel.dart
mobile_app/lib/src/ui/: ai_config_page.dart  app_home.dart  backup_management_page.dart  login_page.dart  photo_count_page.dart  product_price_page.dart  scanner_page.dart
mobile_app/test/: gemma_extractor_test.dart  inventory_service_test.dart  paddle_ocr_channel_test.dart  pp_structure_post_processor_test.dart
plans/: PPOCRv5中文商品清单识别重写_20260518.md  入库出库体验调整_20260518.md  移动扫码入库库存架构_20260515.md
